grammar.js
    source_file: $ => seq(
      semi_sep($.import),
      semi_sep($._dec),
    ),

    // Comments
    line_comment: $ => token(seq("//", /[^\n]*/)),
    block_comment: $ => seq("/*", optional($.comment_text), "*/"),
    comment_text: $ => repeat1(/.|\n|\r/),

    // Identifiers
    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,
    _type_identifier: $ => alias($.identifier, $.type_identifier),
    tag_identifier: $ => seq("#", $.identifier),
    text_literal: $ => /"(?:\\"|[^"])*"/,
    char_literal: $ => /'\\''|'[^']*'/,
    int_literal: $ => /[+-]?[0-9_]+/,
    _literal: $ => choice(
      $.text_literal,
      $.char_literal,
      $.float_literal,
      $.int_literal,
      $.hex_literal,
      $.bool_literal,
      $.null_literal,
    ),

    // Misc
    typ_annot: $ => prec.right(seq(":", $._typ)),
    typ_path: $ => seq(
      repeat(seq($.identifier, ".")),
      $._type_identifier,
    ),
    _dec: $ => choice(
      $._dec_non_exp,
      $.exp_dec,
      $.let_else_dec,
    ),
    var_dec: $ => seq(
      "var",
      $.var_pat,
      optional($.typ_annot),
      "=",
      $._exp_object,
    ),
    let_dec: $ => seq(
      "let",
      $._pat,
      "=",
      $._exp_object,
    ),
    let_else_dec: $ => seq(
      $.let_dec,
      "else",
      $._exp_nest,
    ),
    typ_dec: $ => seq(
      "type",
      $._type_identifier,
      optional($.typ_params),
      "=",
      $._typ,
    ),
    _exp_object: $ => mk_exp($, "object"),

    _exp_nest: $ => choice(
      $.block_exp,
      $._exp_block,
    ),

    lit_exp: $ => $._literal,
    _typ_un: $ => choice(
      $._typ_nullary,
      $.quest_typ,
    ),
    _typ_pre: $ => choice(
      $._typ_un,
      $.prim_typ,
      $.async_typ,
      $._obj_sort_typ,
    ),
    _typ_no_bin: $ => choice(
      $._typ_pre,
      $.func_typ,
    ),
    _typ: $ => choice(
      $._typ_no_bin,
      $.and_typ,
      $.or_typ,
    ),
    tup_typ: $ => seq(
      "(",
      comma_sep($.typ_item),
      ")"
    ),
    path_typ: $ => seq(
      $.typ_path,
      optional(seq(
        // NOTE(id: leading-ws-bug)
        token.immediate("<"),
        comma_sep($._typ),
        ">",
      )),
    ),
    obj_typ: $ => seq(
      "{",
      semi_sep($._typ_field),
      "}",
    ),
    variant_typ: $ => choice(
      seq("{", "#", "}"),
      seq(
        "{",
        semi_sep1($.typ_tag),
        "}",
      ),
    ),
    quest_typ: $ => seq("?", $._typ_un),
    prim_typ: $ => seq("prim", $.text_literal),
    async_typ: $ => seq(
      choice("async", "async*"),
      $._typ_pre,
    ),
    func_typ: $ => seq(
      optional("shared"),
      optional("composite"),
      optional("query"),
      optional($.typ_params),
      $._typ_un,
      "->",
      $._typ_no_bin,
    ),
    typ_item: $ => seq(
      optional(seq($.identifier, ':')),
      $._typ,
    ),
    typ_tag: $ => seq(
      $.tag_identifier,
      optional($.typ_annot),
    ),
    _typ_field: $ => choice(
      $.typ_tf,
      $.val_tf,
      $.func_tf,
    ),
    val_tf: $ => seq(
      optional("var"),
      $.identifier,
      ":",
      $._typ,
    ),
    typ_params: $ => seq(
      "<",
      optional("system"),
      comma_sep($.typ_bind),
      ">",
    ),
    typ_bind: $ => seq(
      field("name", $._type_identifier),
      optional(seq(
        "<:",
        field("supertype", $._typ),
      )),
    ),

    // Patterns
    _pat: $ => $._pat_bin,

    _pat_nullary: $ => choice(
      $._pat_plain,
      $.obj_pat,
    ),
    _pat_un: $ => choice(
      $._pat_nullary,
      $.tag_pat,
      $.quest_pat,
    ),
    _pat_bin: $ => choice(
      $._pat_un,
      $.alt_pat,
      $.annot_pat,
      $.unop_pat,
    ),

    wild_pat: $ => "_",
    var_pat: $ => $.identifier,
    lit_pat: $ => $._literal,
    tup_pat: $ => seq(
      "(",
      comma_sep($._pat_bin),
      ")",
    ),
    obj_pat: $ => seq(
      "{",
      semi_sep($.pat_field),
      "}",
    ),
    tag_pat: $ => seq(
      $.tag_identifier,
      optional($._pat_nullary),
    ),
    quest_pat: $ => seq(
      "?",
      $._pat_un,
    ),
    alt_pat: $ => prec.left(2, seq(
      $._pat_bin,
      "or",
      $._pat_bin,
    )),
    annot_pat: $ => seq($._pat_bin, $.typ_annot),
    pat_field: $ => seq(
      $.identifier,
      optional($.typ_annot),
      optional(seq("=", $._pat))
    ),
  }
});
